@@ -103,6 +103,7 @@ For a more comprehensive changelog for the latest experimental SVN code, see:
    - Fixed bug where Goewin could get stuck in the Weregate
    - Fixed issue with Ratpouch repeatedly moving between two rooms
    - Fix for Goewin losing her schedule after Were-cave
+   - Fix for player getting stuck in sewer exit room
 
  Parallaction:
    - Made part one of The Big Red Adventure completable.
